# public-ingest

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yaml
src/: main.rs  utils.rs
