[package]
name = "public-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.7"
log = "0.4.26"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
steam-vent = { git = "https://github.com/johnpyp/steam-vent", rev = "8e2771eb43b7d4842a817c1ea875983bb91c3bd0" }
valveprotos = { git = "https://github.com/johnpyp/valveprotos-rs", rev = "ed35f6e38bf0e8ec59a7f02d30edddc6f7a5127c", features = ["deadlock"] }
futures = "0.3.31"
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive", "env"] }
prost = "0.13.5"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
