[package]
name = "public-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
steam-vent = { git = "https://github.com/johnpyp/steam-vent", rev = "8e2771eb43b7d4842a817c1ea875983bb91c3bd0" }
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "dd0a663eae1c53db66265443a5d818bb1db4f79c", features = ["gc-client"] }
futures = "0.3.31"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
prost = "0.14.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0.140"
tryhard = "0.5.1"
itertools = "0.14.0"
